Version 1.13.8+dev:
 * Campaigns:
   * Heir to the Throne:
     * Fixed thieves in 'Siege of Elensefar' getting duplicated.
     * Fixed Void Armor not doing anything.
   * Secrets of the Ancients:
     * Fix delay when additional enemies appear in S21 (issue #1706)
     * Fix bug when finding bird bones reported here:
       https://forums.wesnoth.org/viewtopic.php?f=4&t=46480#p614781
   * Under the Burning Suns:
     * Fixed crash in 'Out of the Frying Pan'.
     * Fixed Ethereal Shadow and Ethereal Nightgaunt having nightstalk even when
       they shouldn't.
 * Graphics:
   * Added portrait for Giant Rat.
   * Fixed transparency artifacts in scaled portraits and other message images
     (issue #1570).
   * Fixed issue with jumpy animations on faster speeds (issue #1565).
 * Language and i18n:
   * Updated translations: British English, Chinese (Simplified), Italian,
     Polish, Scottish Gaelic, Slovak, Spanish
 * Lua API:
   * Add wesnoth.format function to substitute variables into a string.
   * Add wesnoth.format_conjunct_list and wesnoth.format_disjunct_list.
   * New global "wml" table groups together all the functions for working
     with WML tables, and its subtable "wml.variable" groups functions
	 for working with WML variables. Most of these are functions previously
	 found only in helper.lua; they no longer need a require to use.
   * Warnings for using deprecated Lua functions now only appear in debug mode.
   * wesnoth.game_config is now accessible in application and mapgen kernels,
     though some of its contents are missing.
   * New extra argument to wesnoth.match_location and wesnoth.get_locations
     allows specifying the teleport_unit.
   * Support the extra wesnoth.match_unit arguments also in wesnoth.get_units
   * Fix wesnoth.put_unit not correctly deciding whether to fire the unit placed
     event in some situations
 * Multiplayer:
   * When set to remember your password, Wesnoth now encrypts it. It is still