@@ -1,4 +1,7 @@
 Version 1.13.8+dev:
+ * Add-ons client:
+   * Fix HTML injection exploit in the wesnoth_addon_manager web index
+     generation functionality.
  * Campaigns:
    * Heir to the Throne:
      * Fixed thieves in 'Siege of Elensefar' getting duplicated.
